alterado estrutura do app

--- a/app/dockerfile
+++ b/app/dockerfile
@@ -1,8 +1,13 @@
 FROM php:7.4-apache
 
 WORKDIR /var/www/html
-COPY index.php /var/www/html
-COPY conexao.php /var/www/html
+COPY backend/incluir.php /var/www/html
+COPY backend/conexao.php /var/www/html
+COPY frontend/js.js /var/www/html
+COPY frontend/index.html /var/www/html
+COPY frontend/css.css /var/www/html
+
+
 
 RUN apt-get update && apt-get install -y \
         libfreetype6-dev \
