--- a/services.yml
+++ b/services.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: php
+  name: app
 spec:
   selector:
-    app: php
+    app: app
   ports:
   - port: 80
     targetPort: 80
